custom source button element

--- a/Views/Home/_Kills.cshtml
+++ b/Views/Home/_Kills.cshtml
@@ -51,7 +51,7 @@
                 pero de repente se incorpora y gira hacia un lado para dispararle a Olivia.
             </p>
         </div>
-
-        <a href="https://de10.com.mx/top-10/10-brutales-crimenes-cometidos-por-negan-en-walking-dead" target="_blank">FUENTE</a>
+        
+        <a class="btn btn-primary" href="https://de10.com.mx/top-10/10-brutales-crimenes-cometidos-por-negan-en-walking-dead" target="_blank">FUENTE</a>
     </div>
 </div>
