added contact form

--- a/Views/Home/Season.cshtml
+++ b/Views/Home/Season.cshtml
@@ -5,9 +5,9 @@
 
 @model HomeIndexDTO
 
-@if (Model.TemporadasList is not null)
-{
-    <div class="text-center" style="padding-top: 2rem;">
+@if (Model.TemporadasList is not null){
+
+    <div class="text-center space_padding">
         <h1>Lista de temporadas</h1>
         <p>Estas son las temporadas en las que Negan hizo su aparición</p>
     </div>
