added thanks page

--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -24,7 +24,7 @@
             <textarea type="mensaje" class="form-control" id="mensaje" name="mensaje" placeholder="Ingrese su mensaje" rows=9></textarea>
         </div>
 
-        <button type="submit" class="btn btn-primary" onclick="alert('Mensaje enviado')">Enviar</button>
+        <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
 
 </div>
